# Hyperpersona

./: .dockerignore  .env.aws-backup  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  plan.md  plan_aws_live.md  plan_remaining.md  prompt.md  schema.md  skills-lock.json  tsconfig.base.json
.claude/: settings.json  settings.local.json
.github/workflows/: deploy-server.yml  deploy-worker.yml
agentcore/: .dockerignore  Dockerfile  agent_handler.py  requirements.txt
apps/web/: .env.example  .env.local.bak  API_HANDOVER_STATUS.md  API_REQUIREMENTS.md  (+15 more)
mcp_server/: README.md  pyproject.toml
mcp_server/examples/: claude_agent_demo.py  claude_desktop_config.json  handshake_test.py  integration_test.py
mcp_server/src/hyperpersona_mcp/: __init__.py  client.py  config.py  server.py
scripts/: conflict_demo.py  dedupe_product_catalog.py  demo_async_recommend.py  demo_backpressure.py  demo_scale.py  demo_tiered.py  generate_indian_catalog.py  image_pools.py  reconcile_products.py  scan.py  scan_vectors.py  seed_demo_customer.py  seed_products.py  seed_recommender_catalog.py  seed_reviews.py  setup_aoss.py  setup_dynamodb.py  setup_opensearch.py  setup_s3.py  setup_sqs.py  show_trace.py  smoke_ecom.sh  test_bedrock.py  test_e2e.py  test_pii.py  test_privacy.py  test_supervisor.py  test_tools.py  verify_bedrock.py  verify_similar_price.py
server/: Dockerfile  requirements.txt
shared/: bedrock.py  constants.py  dynamo.py  opensearch.py  pii.py  preference_vector.py  queue.py  retry.py  s3_sync.py  schemas.py  trace_reader.py  vector_store.py
worker/: Dockerfile  requirements.txt
(+184 files in other folders)
