[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "hyperpersona-mcp"
version = "0.1.0"
description = "Model Context Protocol server for HyperPersona — agentic personalization for any LLM-aware ecommerce surface."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "HyperPersona", email = "hi@hyperpersona.dev" },
]
keywords = ["mcp", "ecommerce", "personalization", "agentic", "anthropic", "claude", "bedrock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp[cli]>=1.0",     # Anthropic's official MCP Python SDK
    "httpx>=0.27",        # async HTTP client to talk to HyperPersona REST
    "pydantic>=2.6",      # for tool schema validation
]

[project.urls]
Homepage = "https://hyperpersona.dev"
Documentation = "https://docs.hyperpersona.dev/mcp"
Repository = "https://github.com/hyperpersona/hyperpersona-mcp"

# This entry point lets users run `hyperpersona-mcp` as a CLI command after
# pip-installing the package. Claude Desktop config points at this command.
[project.scripts]
hyperpersona-mcp = "hyperpersona_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperpersona_mcp"]
